@@ -28,7 +28,7 @@
 #include "../src/kkedit-includes.h"
 
 #define APPNAME "kkedtqtmsg"
-#define MSGVERSION "0.6.0"
+#define MSGVERSION "0.7.0"
 
 #define MAX_MSG_SIZE 4096
 
@@ -39,19 +39,15 @@
 #define WAIT_MSG 0
 
 #define MSGANY 0
+#define LISTENMSG 50
 
 struct option long_options[] =
 {
-	{"send",1,0,'s'},
-	{"type",1,0,'t'},
-	{"all",0,0,'a'},
+	{"command",1,0,'c'},
+	{"data",1,0,'d'},
 	{"key",1,0,'k'},
 	{"wait",0,0,'w'},
-	{"wait-first",0,0,'W'},
-	{"block",0,0,'b'},
 	{"flush",0,0,'f'},
-	{"activate",0,0,'A'},
-	{"version",0,0,'v'},
 	{"help",0,0,'?'},
 	{0, 0, 0, 0}
 };
@@ -64,37 +60,25 @@ struct msgBuffer
 
 int			queueID;
 msgBuffer	buffer;
-bool		action=false;
-int			receiveType=IPC_NOWAIT;
-bool		printAll=false;
-bool		allDone=false;
 bool		flushQueue=false;
-bool		doActivateKKEditQT=false;
-bool		doRemove=false;
-bool		waitFirst=false;
 int			sinkReturn;
+bool		waitForMsg=false;
 
 const char	*commandList[]={"activate","openfile","savefile","quit","restoresession","gotoline","searchdefine","selecttab","selecttabbyname","selecttabbypath","bookmark","closetab","closealltabs","setusermark","unsetusermark","moveto","selectbetween","paste","copy","cut","inserttext","insertnl","insertfile","printfile","waitforkkeditqt","showcontinue","runtool","activatemenubylabel","sendposdata","sendselectedtext",NULL};
 
 void printHelp()
 {
 	unsigned cnt=0;
-	printf("Usage: %s [OPTION] [TEXT]\n"
+	printf("Usage: %s-%s [OPTION] [TEXT]\n"
 	       "A CLI application to send messages to kkeditqt\n"
-	       " -s, --send	Send message [TEXT] (defaults to receive)\n"
-	       " -t, --type	Type of message to send [TEXT] ( defaults to \n"
-	       " -r, --receive	Print all messages in queue to stdout\n"
+	       " -c, --command	Send command [TEXT]\n"
+	       " -d, --data	Data to send [TEXT]\n"
 	       " -f, --flush	Flush message queue quietly\n"
 	       " -k, --key	Use key [INTEGER] instead of generated one\n"
 	       " -w, --wait	Wait for message's to arrive (blocking)\n"
-	       " -W, --wait-first	Wait for first message to arrive (blocking) then continue\n"
-	       " -b, --block	Wait for first message to arrive (blocking) then continue receved message is discarded\n"
-	       " -a, --activate	Activate kkedit\n"
-	       " -R, --remove	Remove Queue\n"
-	       " -v, --version	output version information and exit\n"
 	       " -h, -?, --help	print this help\n\n"
 	       "Report bugs to keithdhedger@gmail.com\n"
-	       ,APPNAME);
+	       ,APPNAME,MSGVERSION);
 
 	printf("\nCommands recognised by KKEditQT:\n");
 	while(commandList[cnt]!=NULL)
@@ -107,7 +91,6 @@ void printHelp()
 
 void sendMsg()
 {
-	//buffer.mType=MSGSEND;
 	if((msgsnd(queueID,&buffer,strlen(buffer.mText)+1,0))==-1)
 		{
 			fprintf(stderr,"Can't send message :(\n");
@@ -118,25 +101,17 @@ void sendMsg()
 void readMsg()
 {
 	int retcode;
+	retcode=msgrcv(queueID,&buffer,MAX_MSG_SIZE,LISTENMSG,WAIT_MSG);
 
-	retcode=msgrcv(queueID,&buffer,MAX_MSG_SIZE,MSGRECEIVE,receiveType);
-
-	if(retcode>1)
-		printf("%s",buffer.mText);
-	else
-		allDone=true;
-}
-
-void block(void)
-{
-	int retcode;
-
-	retcode=msgrcv(queueID,&buffer,MAX_MSG_SIZE,MSGRECEIVE,WAIT_MSG);
+	printf("%s",buffer.mText);
 }
 
 int messageToType(const char *msgstring)
 {
 	int cnt=0;
+	if(strcasecmp(msgstring,"sendmsg")==0)
+		return(LISTENMSG);
+
 	while(commandList[cnt]!=NULL)
 		{
 			if(strcasecmp(msgstring,commandList[cnt])==0)
@@ -152,7 +127,6 @@ int main(int argc, char **argv)
 	int	key;
 	int	retcode;
 	const char *gg="G";
-	bool	doblock=false;
 
 	buffer.mType=ACTIVATEAPPMSG;
 	buffer.mText[0]=0;
@@ -161,74 +135,49 @@ int main(int argc, char **argv)
 	while (1)
 		{
 			int option_index = 0;
-			c = getopt_long (argc, argv, "v?hdbwWfarRs:k:t:",long_options, &option_index);
+			c = getopt_long (argc, argv, "?hwfad:k:c:",long_options, &option_index);
 			if (c == -1)
 				break;
 
 			switch (c)
 				{
-				case 's':
-					strcpy(buffer.mText,optarg);
-					action=true;
-					break;
+					case 'c':
+						buffer.mType=messageToType(optarg);
+						break;
 
-				case 't':
-					buffer.mType=messageToType(optarg);
-					action=true;
-					break;
+					case 'd':
+						strcpy(buffer.mText,optarg);
+						break;
 
-				case 'r':
-					printAll=true;
-					break;
+					case 'f':
+						flushQueue=true;
+						break;
 
-				case 'f':
-					flushQueue=true;
-					break;
+					case 'w':
+						waitForMsg=true;
+						break;
 
-				case 'w':
-					receiveType=WAIT_MSG;
-					break;
+					case 'k':
+						key=strtol(optarg,NULL,0);
+						if((queueID=msgget(key,IPC_CREAT|0660))==-1)
+							{
+								fprintf(stderr,"Can't create message queue\n");
+								exit(NOMAKEQUEUE);
+							}
+						break;
 
-				case 'W':
-					waitFirst=true;
-					break;
+					case '?':
+					case 'h':
+						printHelp();
+						return ALLOK;
+						break;
 
-				case 'k':
-					key=strtol(optarg,NULL,0);
-					if((queueID=msgget(key,IPC_CREAT|0660))==-1)
-						{
-							fprintf(stderr,"Can't create message queue\n");
-							exit(NOMAKEQUEUE);
-						}
-					break;
 
-				case 'a':
-					doActivateKKEditQT=true;
-					break;
-
-				case 'R':
-					doRemove=true;
-					break;
-
-				case 'b':
-					doblock=true;
-					break;
-
-				case 'v':
-					printf("kkeditmsg %s\n",MSGVERSION);
-					return ALLOK;
-					break;
-
-				case '?':
-				case 'h':
-					printHelp();
-					return ALLOK;
-					break;
-
-				default:
-					fprintf(stderr,"?? Unknown argument ??\n");
-					return UNKNOWNARG;
-					break;
+					default:
+						fprintf(stderr,"?? Unknown argument %c ??\n",c);
+						printHelp();
+						return UNKNOWNARG;
+						break;
 				}
 		}
 
@@ -240,54 +189,23 @@ int main(int argc, char **argv)
 
 	if (flushQueue==true)
 		{
-			allDone=false;
-			while(allDone==false)
+			bool flag=false;
+			while(flag==false)
 				{
-					retcode=msgrcv(queueID,&buffer,MAX_MSG_SIZE,MSGANY,receiveType);
+					retcode=msgrcv(queueID,&buffer,MAX_MSG_SIZE,MSGANY,IPC_NOWAIT);
 					if(retcode<=1)
-						allDone=true;
+						flag=true;
 				}
 			return(ALLOK);
 		}
 
-	if(doActivateKKEditQT==true)
+	if (waitForMsg==true)
 		{
-			char *com;
-			sinkReturn=asprintf(&com,"kkeditqt -i %i",key);
-			sinkReturn=system(com);
-			free(com);
-		}
-
-	if(doblock==true)
-		{
-			block();
+			readMsg();
 			return(ALLOK);
 		}
 
-	if (printAll==true)
-		{
-			if(waitFirst==true)
-				{
-					receiveType=WAIT_MSG;
-					readMsg();
-					receiveType=IPC_NOWAIT;
-				}
-			while(allDone==false)
-				readMsg();
-			return(ALLOK);
-		}
-
-	if(doRemove==true)
-		{
-			queueID=msgget(key,IPC_CREAT|0660);
-			msgctl(queueID,IPC_RMID,NULL);
-		}
-
-
-	if(action==false)
-		readMsg();
-	else
-		sendMsg();
+	sendMsg();
 
 	return(ALLOK);
 
