@@ -900,7 +900,6 @@ void KKEditClass::buildMainGui(void)
 
 //help
 	menuItemSink=this->makeMenuItemClass(HELPMENU,"Help",0,"help-contents",HELPMENUNAME,HELPMENUITEM);
-	menuItemSink=this->makeMenuItemClass(HELPMENU,"Online Help",0,"help-contents",ONLINEHELPMENUNAME,ONLINEHELPMENUITEM);
 
 	this->setUpToolBar();
 	this->mainWindow->setMenuBar(qobject_cast<QMenuBar*>(this->menuBar));
